amelioration front end

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>METEO CITY</title>
   </head>
   <body>
-    <div class="d-flex justify-content-center">
+    <div class="w-100 p-3 d-flex justify-content-center">
       <div>
         <h1>METEO CITY</h1>
         <!-- <input type="search" placeholder="Rechercher une ville" /> -->
@@ -31,6 +31,8 @@
            
           </div>
         </nav>
+        <div class="d-flex justify-content-around">
+        <div>
         <h1 id="title">Toulouse</h1>
         <p id="temperature">Temperature</p>
         <p id="temp-maximale" >Temperature Max:</p>
@@ -38,8 +40,9 @@
         <p id="temp-ressenti">Temp resenti:</p>
         <p id="vitesse-du-vent">vitesse du vent</p>
         <p id="taux-d'humidité">Taux d'humidité</p>
-        
+      </div>
         <img id="images" src="" alt="images weather">
+      </div>
     <script type="text/javascript" src="assets/js/script.js">
       // const icon = `https://openweathermap.org/img/wn/${weather[0]["icon"]}@2x.png`;
 
